--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^6.2.0",
     "jsonwebtoken": "^8.4.0",
     "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "telegraf": "^3.25.5",
     "telegraf-aws": "^0.1.1",
     "telegraf-command-parts": "^1.0.3"
