--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "lwl12 <i@lwl12.com>",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^6.2.0",
     "jsonwebtoken": "^8.4.0",
     "request": "^2.88.0",
