--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.2.0",
+    "escape-html": "^1.0.3",
     "jsonwebtoken": "^8.4.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
