--- a/package.json
+++ b/package.json
@@ -6,6 +6,22 @@
   "repository": "https://github.com/TG-reCAPTCHA/Telegram-reCAPTCHA-Bot.git",
   "author": "lwl12 <i@lwl12.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "format": "eslint \"index.js\" --fix && prettier \"index.js\" --write",
+    "lint": "eslint \"index.js\" && prettier-check \"index.js\"",
+    "test": "yarn run lint"
+  },
+  "devDependencies": {
+    "eslint": "5.11.1",
+    "eslint-config-prettier": "3.3.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "lint-staged": "8.1.0",
+    "nodemon": "1.18.9",
+    "prettier": "1.15.3",
+    "prettier-check": "2.0.0"
+  },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.2.0",
