--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier-check": "2.0.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.382.0",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.2.0",
     "escape-html": "^1.0.3",
@@ -31,6 +32,7 @@
     "request-promise": "^4.2.2",
     "telegraf": "^3.25.5",
     "telegraf-aws": "^0.1.1",
-    "telegraf-command-parts": "^1.0.3"
+    "telegraf-command-parts": "^1.0.3",
+    "telegraf-session-dynamodb": "^1.2.0"
   }
 }
